# ms_thesis_code

./: .gitignore  README.md  pyproject.toml
configs/: inference.yaml  judge.yaml
doc/: .gitignore  data_pipeline_readme.md  dataset_stat.md  inference.md  pipeline.md  preference.md  restyle.md  self_preference_comparison_06_greedy_vs_12_ds.md  self_preference_comparison_raw.md
doc/archived/: inference.md
doc/judge_analysis/: self_preference_065.md
doc/official/: official_raw_judge_llama31_8b.md
doc/prompt/: self_recognition.md
scripts/: .gitignore  clean_pairwise_outputs.py  eval_inference_accuracy.py  fireworks_test.py  merge_pairwise_responses.py  prepare_batch_input.py  run_official_judge.sh  run_official_judge_single_load.py  run_official_judge_single_load.sh  run_raw_judge_045.sh  run_raw_judge_095.sh  run_raw_judge_restyled.sh  setup_linux.sh
scripts/answer_extraction/: apply_restyle_to_pairwise.py  clean_inference_outputs.py  eval_pairwise_accuracy.py  merge_pairwise.py  prepare_restyle_batch.py
scripts/data_preprocess/: prepare_batch_input.py
scripts/judge_analysis/: analyze_judge_output_distribution.py  analyze_self_preference.py  analyze_self_preference_continuous.py  check_judge_output_values.py  filter_position_independent.py  prepare_gemini_synonym_batch_input.py
scripts/official/: build_official_quality_pairwise.py
scripts/restyle/: create_gemini_batch_jobs.py  extract_prompt_fields.py  poll_and_download_gemini_batches.py  prepare_gemini_synonym_batch_input.py  replace_answers_with_synonyms.py  replace_reason_in_position_independent.py  upload2fileAPI.py
src/align_lab/: __init__.py  main.py
src/align_lab/inference/: engine.py  judge.py  raw_judge.py
