[project]
name = "align-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yd-pei", email = "162015387+yd-pei@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
