[project]
name = "align-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yd-pei", email = "162015387+yd-pei@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.79.0",
    "bitsandbytes>=0.49.1; platform_system != 'Darwin'",
    "click>=8.3.1",
    "datasets>=4.5.0",
    "google-genai>=1.33.0",
    "huggingface-hub>=0.36.2",
    "openai>=2.17.0",
    "python-dotenv>=1.1.1",
    "pydantic>=2.12.5",
    "torch",
    "tqdm>=4.67.3",
    "vllm>=0.15.1; platform_system != 'Darwin'",
]

[project.scripts]
align_lab = "align_lab.main:cli"

[build-system]
requires = ["uv_build>=0.10.0"]
build-backend = "uv_build"
